--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
+    "http-proxy-middleware": "^0.19.1",
     "react": "^17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
@@ -16,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev": "dotenv -e .env.development react-app-rewired build",
+    "build:pro": "dotenv -e .env.production react-app-rewired build",
+    "build:test": "dotenv -e .env.test react-app-rewired build"
   },
   "eslintConfig": {
     "extends": [
